tests/ui/hygiene/rustc_res/implicit_trait_assoc_ty_not_available_in_inherent_impl.rs
//@ build: fail
//@ stderr
//@ mutest-flags: --Zno-sanitize-macro-expns

use core::ops::Deref;

struct DerefOnly(u32);

impl Deref for DerefOnly {
    type Target = u32;
    fn deref(&self) -> &Self::Target { &self.0 }
}

impl DerefOnly {
    fn copy(&self) -> Self::Target { self.0 }
}
